--- a/20240704SunilTheLastProjectYSMain/src/main/webapp/css/main.css
+++ b/20240704SunilTheLastProjectYSMain/src/main/webapp/css/main.css
@@ -553,12 +553,15 @@ ul, li {
     max-width: 100%;
     border-radius: 40%;
 }
+
 .a-1 {
     width: 100px;
     margin-left: auto;
     margin-right: auto;
     position: relative;
 }
+
+
 .a1-b {
     position: absolute;
     top: 0px;
@@ -589,6 +592,10 @@ ul, li {
     font-weight: bold;
     font-size: 17px;
 }
+.category-icon a:hover {
+	text-decoration: none !important;
+}
+
 a {
     font-size: 100%;
     color: inherit;
