--- a/2024_0720_Project2_DB/src/main/webapp/resources/css/items_list.css
+++ b/2024_0720_Project2_DB/src/main/webapp/resources/css/items_list.css
@@ -18,7 +18,7 @@ body {
 }
 
 .search {
-	margin: auto;
+	margin-left: 300px;
 	
 	background: white;
 	border-radius: 20px;
@@ -388,7 +388,7 @@ hr {
 	
 	background-color: #353944;
 	color: #949492;
-	margin-left: 80px;
+	margin-left: 55px;
 	
 	text-decoration: none;
 	pointer-events: none;
@@ -413,10 +413,10 @@ hr {
 }
 
 #item_sell {
-	width: 320px;
+	width: 370px;
 	height: 300px;
 	margin-top: 25px;
-	margin-left: 100px;
+	margin-left: 50px;
 	
 	float: left;
 	
@@ -427,7 +427,10 @@ hr {
 }
 
 #item_sell1 {
-	margin: 30px;
+	margin-left: 35px;
+	margin-top: 30px;
+	margin-bottom: 30px;
+	margin-right: 25px;
 }
 
 #item_sell2 {
