--- a/2024_0720_Project2_DB/src/main/webapp/resources/css/items_list.css
+++ b/2024_0720_Project2_DB/src/main/webapp/resources/css/items_list.css
@@ -31,6 +31,21 @@ body {
 	min-width: 18vw;
 }
 
+.search2 {
+	margin: auto;
+	float: right;
+	
+	background: white;
+	border-radius: 20px;
+	
+	font-weight: bold;
+	padding-left: 25px;
+	
+	height: 50px;
+	width: 250px;
+	min-width: 18vw;
+}
+
 #search-btn {
 	position : absolute;
 	top : 25px;
