--- a/2024_0720_Project2_DB/src/main/webapp/resources/css/items_list.css
+++ b/2024_0720_Project2_DB/src/main/webapp/resources/css/items_list.css
@@ -74,7 +74,7 @@ body {
 .ui-autocomplete {
 	width: 300px; /* 원하는 너비로 설정 */
 	overflow-y: auto;
-	/* prevent horizontal scrollbar */
+	/* 가로 스크롤바는 가리기 */
 	overflow-x: hidden;
 	font-size: 20px;
 	height: 500px;
@@ -91,19 +91,41 @@ body {
 	height: 60px;
 }
 
-/* aa */
+
+
+
+/* 아이템 검색창 li */
 
 .ui-autocomplete {
     max-height: 200px; /* 최대 높이 설정 */
     overflow-y: auto; /* 스크롤 가능하게 설정 */
     justify-content: center; /* 자식 요소를 가로(수평) 기준으로 가운데 정렬시킴 */
     align-items: center; /* 자식 요소를 세로(수직) 기준으로 가운데 정렬시킴 */
+    background: white;
 }
 
 .ui-autocomplete li {
     white-space: nowrap; /* 텍스트를 한 줄로 표시 */
-    overflow: hidden; /* 넘치는 텍스트 숨김 */
-    text-overflow: ellipsis; /* 넘치는 텍스트에 ... 표시 */
+    
+    display: block;
+    height: 60px;
+    
+    text-align: center;
+    
+    background: #191C20;
+    color: #AE906A;
+	font-weight: 200; 
+}
+
+
+.ui-autocomplete li:hover {
+	text-decoration: none;
+    background: #23262c;
+}
+
+.ui-autocomplete a {
+    text-decoration: none;
+    color: white;
 }
 
 .ui-autocomplete img {
@@ -114,7 +136,8 @@ body {
     vertical-align: middle;
 }
 
-/* aa */
+/* 아이템 검색창 li end */
+
 
 
 .ui-menu-item div.ui-state-hover,
