--- a/2024_0720_Project2_DB/src/main/java/css/items_list.css
+++ b/2024_0720_Project2_DB/src/main/java/css/items_list.css
@@ -18,24 +18,9 @@ body {
 }
 
 .search {
-	margin-left: 300px;
-	
-	background: #191C20;
-	border-radius: 20px;
-	
-	font-weight: bold;
-	padding-left: 25px;
-	
-	height: 50px;
-	width: 250px;
-	min-width: 18vw;
-}
-
-.search2 {
 	margin: auto;
-	float: right;
 	
-	background: #191C20;
+	background: white;
 	border-radius: 20px;
 	
 	font-weight: bold;
@@ -71,112 +56,13 @@ body {
 	box-shadow: 1px 1px 2px gray;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 .ui-autocomplete {
 	width: 300px; /* 원하는 너비로 설정 */
 	overflow-y: auto;
-	/* 가로 스크롤바는 가리기 */
+	/* prevent horizontal scrollbar */
 	overflow-x: hidden;
-	font-size: 20px;
 	height: 500px;
-	
-	background: #191C20;
-	
-	border: 1px solid gray;
-	border-style: solid;
-    border-width: 1px;
 }
-
-.ui-menu-item {
-	border-bottom: 1px solid gray;
-	height: 60px;
-}
-
-
-
-
-
-#btn-btn {
-	font-size: 13px;
-	text-decoration: none;
-	width: 60px;
-	height: 25px;
-	padding: 3px;
-	
-	display: inline-block;
-	
-	border: 1px solid #CB9D41;
-	color: #CB9D41;
-	
-	text-decoration: none;
-	pointer-events: none;
-	cursor: default;
-}
-
-
-
-
-/* 아이템 검색창 li */
-
-.ui-autocomplete {
-    max-height: 200px; /* 최대 높이 설정 */
-    overflow-y: auto; /* 스크롤 가능하게 설정 */
-    justify-content: center; /* 자식 요소를 가로(수평) 기준으로 가운데 정렬시킴 */
-    align-items: center; /* 자식 요소를 세로(수직) 기준으로 가운데 정렬시킴 */
-    background: #191C20;
-}
-
-.ui-autocomplete > div {
-	vertical-align: middle;
-}
-
-.ui-autocomplete li {
-    white-space: nowrap; /* 텍스트를 한 줄로 표시 */
-    
-    display: block;
-    height: 60px;
-    
-    text-align: left;
-    
-    background: #191C20;
-    color: #AE906A;
-	font-weight: 200; 
-	
-}
-
-
-.ui-autocomplete li:hover {
-	text-decoration: none;
-    background: #23262c;
-}
-
-/* AutoComplete Image 변경 */
-.ui-autocomplete img {
-    max-width: 40px; /* 이미지의 너비 설정 */
-    max-height: 60px;
-    height: auto;
-    margin-right: 5px; /* 이미지와 텍스트 사이의 간격 설정 */
-}
-/* AutoComplete Image 변경 end */
 
 .ui-menu-item div.ui-state-hover,
 .ui-menu-item div.ui-state-active {
@@ -187,43 +73,7 @@ body {
   -webkit-border-radius: 0px;
   -moz-border-radius: 0px;
   background-image: none;
-  border: 1px solid gray;
-  
-  height: 100%;
-}
-
-/* AutoComplete font 변경 */
-.ui-autocomplete.ui-front.ui-menu.ui-widget.ui-widget-content {
-  font-size: 15px;
-  color: #AE906A;
-  font-weight: 200;
-  
-  word-break: break-all;
-}
-
-.ui-autocomplete:hover
-.ui-front.ui-menu.ui-widget:hover
-.ui-widget-content:hover {
-  background-color: none;
-}
-/* AutoComplete font 변경 end */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* 광고 */
-#item-box-advertisement {
-	text-align: center;
+  border:none;
 }
 
 
@@ -538,7 +388,7 @@ hr {
 	
 	background-color: #353944;
 	color: #949492;
-	margin-left: 55px;
+	margin-left: 80px;
 	
 	text-decoration: none;
 	pointer-events: none;
@@ -563,10 +413,10 @@ hr {
 }
 
 #item_sell {
-	width: 370px;
+	width: 320px;
 	height: 300px;
 	margin-top: 25px;
-	margin-left: 50px;
+	margin-left: 100px;
 	
 	float: left;
 	
@@ -577,10 +427,7 @@ hr {
 }
 
 #item_sell1 {
-	margin-left: 35px;
-	margin-top: 30px;
-	margin-bottom: 30px;
-	margin-right: 25px;
+	margin: 30px;
 }
 
 #item_sell2 {
@@ -660,13 +507,6 @@ hr {
 	height: 30px;
 	
 	border-radius: 5px;
-	
-	display: grid;
-	grid-template-columns: 1.5fr 2fr 8fr 1fr 1.3fr;
-	align-items: center; /* gird 속성 세로 가운데 정렬 */
-    justify-items: right; /* gird 속성 가로 오른쪽 정렬 */
-    
-    font-size: 13px;
 }
 
 #usercard-cp > img {
@@ -675,21 +515,8 @@ hr {
 }
 
 #usercard-cp2 {
-	margin-top: 3px;
-	justify-self: center;
-}
-
-#usercard-cp3 {
-	justify-self: left;
-}
-
-#usercard-cp5 {
-	font-size: 12px;
-}
-
-#usercard-cp6 {
-	font-size: 12px;
-	justify-self: center;
+	margin-top: 10px;
+	margin-left: 10px;
 }
 
 #usercard-btn {
