--- a/2024_0720_Project2_DB/src/main/webapp/resources/css/sell_reg.css
+++ b/2024_0720_Project2_DB/src/main/webapp/resources/css/sell_reg.css
@@ -227,6 +227,40 @@ body {
 }
 
 
+
+
+
+
+
+
+
+
+
+/* 모달 action */
+
+.modal:hover {
+	color: skyblue;
+	
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* 거래 아이템 리스트 윗부분 */
 
 /* 물품 목록 갯수 */
