--- a/2024_0720_Project2_DB/src/main/webapp/resources/css/sell_reg.css
+++ b/2024_0720_Project2_DB/src/main/webapp/resources/css/sell_reg.css
@@ -238,9 +238,12 @@ body {
 
 /* 모달 action */
 
-.modal:hover {
-	color: skyblue;
-	
+.modal {
+	color: #AE906A;
+}
+
+.modal-content {
+	background-color: #1F2128;
 }
 
 
