--- a/2024_0720_Project2_DB/src/main/webapp/resources/css/sell_reg.css
+++ b/2024_0720_Project2_DB/src/main/webapp/resources/css/sell_reg.css
@@ -78,16 +78,38 @@ body {
 
 
 
+/* 빤짝이는 효과 */
+
+
+@keyframes blink {
+	0% {
+	  opacity: 1;
+	}
+	50% {
+	  opacity: 0;
+	}
+	100% {
+	  opacity: 1;
+	}
+}
+
+#item-box-head-text-sub > span {
+  animation: blink 4s infinite; /* 1초 간격으로 무한 반복 */
+}
 
 
 
 
+#inputBox {
+	color: #8D795C;
+	font-size: 15px;
+	font-weight: 300px;
+}
 
-
-
-
-
-
+input::placeholder {
+	font-size: 13px;
+	animation: blink 1s infinite; /* 1초 간격으로 무한 반복 */
+}
 
 
 
@@ -180,9 +202,9 @@ body {
 
 .ui-menu-item div.ui-state-hover,
 .ui-menu-item div.ui-state-active {
-  color: #ffffff;
+  color: #AE906A;
   text-decoration: none;
-  background-color: skyblue;
+  background-color: #1c1c1c;
   border-radius: 0px;
   -webkit-border-radius: 0px;
   -moz-border-radius: 0px;
