--- a/2024_0720_Project2_DB/src/main/webapp/resources/css/main.css
+++ b/2024_0720_Project2_DB/src/main/webapp/resources/css/main.css
@@ -144,13 +144,13 @@ a:hover{
     
 }
 .navbar-inverse{
-	background-color:#131319;
+	background-color:#17171E;
 	background-image: url("../images/deco_bg_2.png");
 	cursor: pointer;
 }
 #header-tab-inside{
 	display:flex;
-	background-color: #131319;
+	background-color: #17171E;
 	background-image: url("../images/deco_bg_2.png");
 	margin-left: 300px;
 }
@@ -159,15 +159,15 @@ a:hover{
 .navbar-inverse::after {
   content: '';
   position: absolute;
-  background: #131319;
+  background: #17171E;
   z-index: -1;
   inset: 0;
   opacity: 0.2;
 }
 
 .container-fleid{
-	width:100%;
-	padding-top: 10px;
+	width:1300px;
+	padding-top: 9px;
 /* 	border-bottom: 1px solid #E9E9E9 !important; */
 }
 .container-fleid-list{
@@ -224,6 +224,12 @@ a:hover{
     margin: 0 auto;
     margin-top: 10px;    
 }
+#item-search2{
+    width: 1300px;
+    height: auto;
+    margin: 0 auto;
+    margin-top: 10px;    
+}
 #search-title{
     font-size: 18px;
     color: gray;
@@ -246,6 +252,7 @@ a:hover{
     margin-bottom: 30px;
     
     gap: 1.5rem;
+    width: 1200px;
 }
 .tabs{
     flex: 1;
