--- a/2024_0720_Project2_DB/src/main/webapp/resources/css/sell_reg.css
+++ b/2024_0720_Project2_DB/src/main/webapp/resources/css/sell_reg.css
@@ -103,15 +103,16 @@ body {
 
 #inputBox {
 	color: #8D795C;
-	font-size: 15px;
+	font-size: 16px;
 	font-weight: 300px;
 }
 
-input::placeholder {
+#inputBox::placeholder {
 	padding-left: 10px;
 	font-size: 13px;
-	animation: blink 1s infinite; /* 1초 간격으로 무한 반복 */
+	animation: blink 1s infinite;
 }
+
 
 
 
@@ -125,9 +126,7 @@ input::placeholder {
 	
 	background: #191C20;
 	
-	border: 1px solid gray;
-	border-style: solid;
-    border-width: 1px;
+	border: 1px solid #181B1F;
 }
 
 .ui-menu-item {
@@ -166,7 +165,7 @@ input::placeholder {
     overflow-y: auto; /* 스크롤 가능하게 설정 */
     justify-content: center; /* 자식 요소를 가로(수평) 기준으로 가운데 정렬시킴 */
     align-items: center; /* 자식 요소를 세로(수직) 기준으로 가운데 정렬시킴 */
-    background: #191C20;
+    background: #181B1F;
 }
 
 .ui-autocomplete > div {
@@ -193,14 +192,6 @@ input::placeholder {
     background: #23262c;
 }
 
-/* AutoComplete Image 변경 */
-.ui-autocomplete img {
-    max-width: 40px; /* 이미지의 너비 설정 */
-    max-height: 60px;
-    height: auto;
-    margin-right: 5px; /* 이미지와 텍스트 사이의 간격 설정 */
-}
-/* AutoComplete Image 변경 end */
 
 .ui-menu-item div.ui-state-hover,
 .ui-menu-item div.ui-state-active {
@@ -219,7 +210,7 @@ input::placeholder {
 /* AutoComplete font 변경 */
 .ui-autocomplete.ui-front.ui-menu.ui-widget.ui-widget-content {
   font-size: 15px;
-  color: #AE906A;
+  color: #AE906A;;
   font-weight: 200;
   
   word-break: break-all;
@@ -570,7 +561,7 @@ input::placeholder {
 
 #item-box {
 	width : 1300px;
-	height : 600px;
+	height : auto;
 	background-color: #1E2128;
 	margin: auto;
 	margin-top: 25px;
@@ -622,7 +613,7 @@ input::placeholder {
 /* 아이템 입력 하단 start */
 
 
-#item-box-radius-footer {
+#item_box_radius_footer {
 	width : 1250px;
 	height: 50px;
 	
@@ -717,7 +708,6 @@ hr {
 	width: 320px;
 	height : 350px;
 	display: inline-block;
-	float: left;
 	
 	margin-left: 200px;
 	
@@ -735,23 +725,50 @@ hr {
 	margin-bottom: 2px;
 }
 
+.modal-text > img {
+	width: 12px;
+}
+
 .modal-text:hover {
 	width: 300px;
-	height: 15px;
+	height: 17px;
 	
 	border: 0.5px #8D795C;
 	border-style: dashed;
 	
-	background-color: black;
+	background-color: #16181d;
 }
 
 .modal-text-option {
 	margin-bottom: 2px;
 }
 
+.modal-text-option > img {
+	width: 12px;
+}
+
+.modal-text-option:hover {
+	width: 300px;
+	height: 17px;
+	
+	border: 0.5px #8D795C;
+	border-style: dashed;
+	
+	background-color: #16181d;
+}
+
+#item_im > img {
+	width: 12px;
+}
+
+#item_shot > img {
+	width: 12px;
+}
+
+
 
 #option_font {
-	font-size: 13px;
+	font-size: 14px;
 	color: #2b6ca2;
 }
 
@@ -858,124 +875,35 @@ hr {
 	margin-right: 25px;
 }
 
-#item_sell2 {
-
-}
-
-#usercard-text {
-	width: 115px;
-	
-	color: #CB9D41;
-	
-	margin-top: -10px;
-	margin-left: 12px;
-	
-	background-color: #1B1D23;
-}
-
-.usercard-text {
-	font-size: 12px;
-}
-
-.usercard-text > span {
-	color: #AE906A;
-}
-
-.usercard-image {
-    width: 22px;
-    height: 22px;
-    object-fit: cover;
-    border-radius: 50%;
-    
-    margin-right: 5px;
-}
-
-.usercard-grade {
-    width: 15px;
-    height: 15px;
-    object-fit: cover;
-    
-    margin-right: 5px;
-}
-
-.usercard-name {
-	display: inline-flex;
-}
-
-#item_sell3 > span {
-	font-size: 13px;
-}
-
-.item_clock {
-	margin-left: 15px;
-	margin-bottom: 8px;
-}
-
-.item_clock2 {
-	margin-left: 50px;
-	margin-bottom: 8px;
-}
-
-#usercard-text2 {
-	width: 50px;
-	
-	color: #CB9D41;
-	
-	margin-top: -30px;
-	margin-left: 12px;
-	
-	background-color: #1B1D23;
-}
-
-#usercard-cp {
+#input_coin {
+	width: 1250px;
+	height: 500px;
+	background-color: #1E2128;
 	margin: auto;
-	margin-top: 10px;
-	background-color: #15171E;
-	width: 350px;
-	height: 30px;
+	margin-top: 30px;
 	
-	border-radius: 5px;
+}
+
+
+#input_coin-sub1 {
+	width: 50%;
+	height: 250px;
+	border-bottom: 0.1px solid #3e3e3e;
+		
+	display: flex;
+	float: left;
+    align-items: center; /* 자식 요소를 세로(수직) 기준으로 가운데 정렬시킴 */
+    overflow: hidden;
+}
+
+#input_coin-sub2 {
+	width: 50%;
+	height: 250px;
+	border-bottom: 0.1px solid #3e3e3e;
+	border-left: 0.1px solid #3e3e3e;
 	
-	display: grid;
-	grid-template-columns: 1.5fr 2fr 8fr 1fr 1.3fr;
-	align-items: center; /* gird 속성 세로 가운데 정렬 */
-    justify-items: right; /* gird 속성 가로 오른쪽 정렬 */
-    
-    font-size: 13px;
-}
-
-#usercard-cp > img {
-	width: 15px;
-	height: 15px;
-}
-
-#usercard-cp2 {
-	margin-top: 3px;
-	justify-self: center;
-}
-
-#usercard-cp3 {
-	justify-self: left;
-}
-
-#usercard-cp5 {
-	font-size: 12px;
-}
-
-#usercard-cp6 {
-	font-size: 12px;
-	justify-self: center;
-}
-
-#usercard-btn {
-	text-align: center;
-	margin-top: 5px;
-}
-
-#usercard-btn > button {
-	width: 350px;
-	height: 40px;
-	border-radius: 7px;
-	box-shadow: 0px;
-	background-color: #252830;
+	display: flex;
+	float: left;
+    align-items: center; /* 자식 요소를 세로(수직) 기준으로 가운데 정렬시킴 */
+    overflow: hidden;
 }
