--- a/2024_0720_Project2_DB/src/main/webapp/resources/css/sell_reg.css
+++ b/2024_0720_Project2_DB/src/main/webapp/resources/css/sell_reg.css
@@ -103,6 +103,10 @@ body {
 
 
 
+
+
+
+
 #inputBox {
 	color: #8D795C;
 	font-size: 16px;
@@ -116,6 +120,21 @@ body {
 	font-size: 13px;
 	animation: blink 1s infinite;
 }
+
+#inputBox_x {
+	position: absolute;
+	background-color: none;
+	right: 60px;
+	top: 13px;
+	
+	background: inherit;
+	
+	background: none;
+    border: none;
+    cursor: pointer; /* 커서 모양 변경 */
+    padding: 0; /* 패딩 제거 */
+}
+
 
 
 
@@ -165,17 +184,14 @@ body {
 /* 아이템 검색창 li */
 
 .ui-autocomplete {
-    max-height: 200px; /* 최대 높이 설정 */
+	
+	height: auto;
+    max-height: 180px; /* 최대 높이 설정 */
     overflow-y: auto; /* 스크롤 가능하게 설정 */
     justify-content: center; /* 자식 요소를 가로(수평) 기준으로 가운데 정렬시킴 */
     align-items: center; /* 자식 요소를 세로(수직) 기준으로 가운데 정렬시킴 */
-    background: #181B1F;
+    background: #121212;
 }
-
-.ui-autocomplete > div {
-	vertical-align: middle;
-}
-
 
 .ui-menu-item div.ui-state-hover,
 .ui-menu-item div.ui-state-active {
@@ -186,7 +202,6 @@ body {
   -webkit-border-radius: 0px;
   -moz-border-radius: 0px;
   background-image: none;
-  border: 1px solid gray;
   
   height: 100%;
 }
@@ -197,9 +212,25 @@ body {
   color: #AE906A;;
   font-weight: 200;
   
-  margin-left: 50px;
+  text-indent: 15px;
+  line-height: 50px;
+  
+  border: 0.5px solid #8D795C;
   
   word-break: break-all;
+}
+
+.ui-autocomplete .ui-menu-item {
+  border-top: 0.2px solid #8D795C;
+  border-bottom: 0.2px solid #8D795C;
+}
+
+.ui-autocomplete .ui-menu-item:first-child {
+  border-top: none;
+}
+
+.ui-autocomplete .ui-menu-item:last-child {
+  border-bottom: none;
 }
 
 .ui-autocomplete:hover
@@ -207,6 +238,28 @@ body {
 .ui-widget-content:hover {
   background-color: none;
 }
+
+
+
+/* 스크롤바 스타일 */
+.ui-autocomplete::-webkit-scrollbar {
+  width: 8px;
+}
+/* 스크롤바 배경 색상 */
+.ui-autocomplete::-webkit-scrollbar-track {
+  background: #121212;
+  border-left: 0.5px solid #AE906A;
+}
+
+/* 스크롤바 색상 */
+.ui-autocomplete::-webkit-scrollbar-thumb {
+  background: #AE906A; 
+}
+
+.ui-autocomplete::-webkit-scrollbar-thumb:hover {
+  background: #8B6F50;
+}
+
 /* AutoComplete font 변경 end */
 
 
