--- a/2024_0720_Project2_DB/src/main/webapp/resources/css/sell_reg.css
+++ b/2024_0720_Project2_DB/src/main/webapp/resources/css/sell_reg.css
@@ -13,69 +13,22 @@
 	padding: 0px;
 }
 
+li{
+    list-style: none;
+}
+
+a{
+    text-decoration: none;
+    cursor: pointer;
+}
+
+a:hover{
+    text-decoration: none;
+}
+
 body {
 	background-color: #1F2128;
 }
-
-.search {
-	margin-left: 300px;
-	
-	background: #191C20;
-	border-radius: 20px;
-	
-	font-weight: bold;
-	padding-left: 25px;
-	
-	height: 50px;
-	width: 250px;
-	min-width: 18vw;
-}
-
-.search2 {
-	margin: auto;
-	float: right;
-	
-	background: #191C20;
-	border-radius: 20px;
-	
-	font-weight: bold;
-	padding-left: 25px;
-	
-	height: 50px;
-	width: 250px;
-	min-width: 18vw;
-}
-
-#search-btn {
-	position : absolute;
-	top : 25px;
-	left : 53%; 
-}
-
-#search-btn > input {
-	background: #f7feff;
-	border-radius: 10px;
-	width : 65px;
-	border: 2px solid skyblue;
-	color : skyblue;
-	
-	height: 45px;
-}
-
-/* #search-btn > img {
-	width: 20px;
-	display: inline;
-} */
-
-#search-btn > input:hover {
-	box-shadow: 1px 1px 2px gray;
-}
-
-
-
-
-
-
 
 
 /* 빤짝이는 효과 */
@@ -97,6 +50,463 @@ body {
 #side-btn {
   animation: blink 1s infinite; /* 1초 간격으로 무한 반복 */
 }
+
+
+/* 빤짝이는 효과 end */
+
+
+
+
+
+/* 다희 header */
+#header-box{
+	width:1300px;
+	height: 165px;
+	margin: auto;
+}
+#header{
+    position: relative;
+    height: 165px;
+    
+    background :#202126;
+    background-image: url("../images/deco_bg_2.png");
+    overflow: hidden;
+}
+
+#header-img1 {
+	text-align: center;
+	z-index: 10;
+	margin-top: -8px;
+}
+
+#header1 {
+	display: flex;
+	justify-content: start;
+}
+
+#header-img1 > img {
+	height: 15px;
+	width: 250px;
+	z-index: 8;
+}
+
+#header-img2 {
+	text-align: center;
+	z-index: 15;
+	margin-top: -63px;
+}
+
+#logo{
+	width: 370px;
+    height: 50px;
+    margin-top: -15px;
+    z-index: 12;
+    
+}
+
+#logo > img {
+	width: 250px;
+	
+}
+
+#login-main{
+    position: absolute;
+    top : 52px;
+    right : 17%;
+    display: inline-block;
+    
+}
+.user-circle{
+	content: "\ea38";
+}
+#login-btn a{
+    text-decoration: none;
+    color: #878788;
+    padding-right: 11px;
+    padding-left:11px;
+    font-size: 16px;
+    display: inline;
+    font-weight: 500;
+    
+}
+.updown {
+		position: absolute;
+    	border: 0.1px solid #878788;
+        width: 0.1px;
+        height: 25px;
+        display: inline-block;
+    }
+#who a{
+	position: absolute;
+	display: inline-block;
+	color: #878788;
+	font-size: 14px;
+	padding-right: 6px;
+    padding-left:6px;
+    font-weight: bold;
+}
+
+#who a:hover{
+	color:white;
+	font-weight: bold;
+}
+    
+/* 유저 로그인시 나오는 문구 */
+#user_ment{
+    font-size: 25px;
+    font-weight: bold;
+    padding-right: 30px;
+}
+#login-btn a:hover{
+    color: white;
+}
+/* .login-icon img {
+    width: 26px;
+} */
+.login-icon{
+    display: inline-block;
+}
+#header-tab{
+    position: absolute;
+    width: 100%;
+    height: 57px;   
+    border-top: 1px solid #131319 !important;
+    border-bottom: 1px solid #131319 !important;
+    bottom: 0;
+    
+    
+    background-color: #131319;
+    background-image: url("../images/deco_bg_2.png");
+    
+}
+.navbar-inverse{
+	background-color:#17171E;
+	background-image: url("../images/deco_bg_2.png");
+	cursor: pointer;
+}
+#header-tab-inside{
+	display:flex;
+	background-color: #17171E;
+	background-image: url("../images/deco_bg_2.png");
+	margin-left: 300px;
+}
+
+#header-tab-inside::after, #header-tab::after,
+.navbar-inverse::after {
+  content: '';
+  position: absolute;
+  background: #17171E;
+  z-index: -1;
+  inset: 0;
+  opacity: 0.2;
+}
+
+.container-fleid{
+	width:1300px;
+	padding-top: 9px;
+/* 	border-bottom: 1px solid #E9E9E9 !important; */
+}
+.container-fleid-list{
+	display: flex;
+	align-items: center;
+	justify-content: flex-start;
+	column-gap: 20px;
+	padding: 0;
+}
+.container-fleid-list li{
+	list-style: none;	
+	position: relative;
+	padding: 0 25px;
+	align-items: center;
+}
+#first{
+	color: #e59d19;
+}
+#first:hover{
+	color:white;
+}
+#second{
+	color: #BFB186;
+}
+#second:hover{
+	color: #cec4a4;
+}
+.header-tab-menu a{
+	display : flex; 
+	position:relative;
+	height:100%;
+	align-items : center;
+	text-decoration: none;
+	color: #8d795c;
+	white-space: nowrap; 
+	font-weight:600;
+	font-size: 17px;
+}
+.header-tab-menu a:hover{
+	color: #ac9b82;
+}
+/* 다희 header */
+
+
+
+
+
+
+
+
+
+
+/* 메인 css 전부 수정함 */
+
+
+#main-content{
+    position: relative;
+    height: auto;
+    background: #1e2128;
+}
+
+#item-search{
+    width: 1300px;
+    height: 700px;
+    margin: 0 auto;
+    margin-top: 10px;    
+}
+#item-search2{
+    width: 1300px;
+    height: auto;
+    margin: 0 auto;
+    margin-top: 10px;    
+}
+
+.tab-box{
+    position: relative;
+    display: flex;
+    margin-bottom: 30px;
+    
+    gap: 1.5rem;
+    width: 1200px;
+}
+
+.tabs{
+    flex: 1;
+    min-width:0;
+}
+
+#search-tab-list{
+    display: flex;
+    padding: 0;
+}
+
+.cate-box{
+    position: relative;
+    flex-grow: 1;
+}
+
+.cate-box a{
+    font-size: 20px;
+    font-weight: bold;
+    color: #cccccc;
+    border: 1px solid gray;
+    padding: 1.5rem;
+    
+    opacity: 0.5;
+    display: block;
+    
+    text-align: center;
+    
+    max-width: 100%;
+    white-space: nowrap; /* 공백 축소/줄바꿈x */
+    
+}
+
+.cate-box:not(.active):hover{
+    background: #1A1B21;
+}
+.cate-box:not(.active):hover a{
+    color: #DEDEDF;
+}
+.cate1:hover{
+    border-top-left-radius: 0.75em;
+}
+.cate4:hover{
+    border-top-right-radius: 0.75em;
+}
+.active a{
+    color: #8D795C;    
+    border-bottom-color: transparent;
+}
+#search-tab-list>li+li{
+    margin-left: -1px;
+}
+#search-tab-list>li:first-child>a{
+    border-top-left-radius: 0.75em;
+}
+#search-tab-list>li:last-child>a{
+    border-top-right-radius: 0.75em;
+}
+.sell-btn{
+    display: flex;
+    position: relative;
+    height: 62px;
+    
+    gap: 0.75rem;
+}
+#sell-link{
+    display: flex;
+    position: relative;
+    
+    gap: 0.75rem;
+    border-radius: 0.5rem;
+    
+    align-items: center;
+    
+    background: #353946;
+    color: white;
+    
+    padding-top: unset;
+    padding-bottom: unset;
+    padding: 2rem;
+    
+    font-size: 20px;
+}
+#sell-link:hover{
+    background: #2B2E36;
+}
+.search-tab{
+    width: 100%;    
+    position: relative; 
+    padding: 1.5rem;
+    margin-top: 2rem;
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+    
+    border: 0.7px solid #292a2b;
+}
+.tab-label{
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    bottom: calc(100% - .5rem);
+    left: 1.9rem;
+    line-height: 1rem;
+    padding: 0 1rem;
+    background: #1e2128;
+}
+.game-mode{
+    display: flex;
+    position: relative;
+    
+    gap: 0.5rem;
+}
+.mode{
+    display: flex;
+    position: relative; 
+    flex: 1;
+}
+
+.mode-title{
+    border: 1px solid #8D795C;
+    padding:0;
+    width:100%;
+    padding: 1.5rem;
+    position: relative;
+    height: 50px;
+}
+
+.mode-sub{
+    left: 0.5rem;
+    padding: 0 0.6rem;
+    
+    background: #1e2128;
+    
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    bottom: calc(100% - .5rem);
+    line-height: 1rem;
+}
+
+#item-filter{
+    position: relative;
+    margin-top: -1px;
+    width: 100%;
+    padding: 1.5rem;    
+    
+    border: 0.7px solid #292a2b;
+}
+
+#filter-title{
+    background: #1e2128;
+    
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    bottom: calc(100% - .5rem);
+    left: 1.9rem;
+    line-height: 1rem;
+    padding: 0 1rem;
+}
+
+.filter-box{
+    display: flex;
+    position: relative;
+    
+    gap: 1.5rem;
+}
+
+.filter-box1{
+    display: flex;
+    position: relative;
+    
+    gap: 0.5rem;
+    flex: 1;
+    flex-direction: column;
+    
+}
+
+.search-window{
+    position: relative;
+}
+
+.search-window #inputBox{
+    font-size: 13px;
+    height: 50px;
+    width: 100%;
+    padding: 0 6rem 0 1rem;
+    color: gray;
+    border: 0.5px solid #524427;
+    background: #121212;
+}
+
+.search-btn{
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    bottom: 5px;
+    
+    text-align: center;
+    font-size: 19px;
+    width: 3rem;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -345,17 +755,7 @@ body {
 	right : 0px;
 }
 
-/* 최근 등록순 button */
-.btn-success {
-	width : 120px;
-	height : 40px;
-	border-radius: 0px;
-	background-color: #191C20!important;
-	border: 1px solid #AE906A !important;
-	color: #AE906A !important;
-	
-	font-size: 15px;
-}
+
 
 
 #item-box-head-text-sub {
@@ -422,8 +822,6 @@ body {
 	height : 100px;
 	
 	float : left;
-	background-color: #9dd9ff;
-	border: 1px solid red;
 	
 	padding-top: 20px;
 	
@@ -882,41 +1280,7 @@ hr {
 	cursor: default;
 }
 
-.btn-3 {
-	font-size: 13px;
-	text-decoration: none;
-	width: 70px;
-	height: 25px;
-	padding: 3px;
-	padding-left: 5px;
-	
-	display: inline-block;
-	
-	background-color: #353944;
-	color: #949492;
-	margin-left: 55px;
-	
-	text-decoration: none;
-	pointer-events: none;
-	cursor: default;
-}
 
-.btn-4 {
-	font-size: 13px;
-	text-decoration: none;
-	width: 60px;
-	height: 25px;
-	padding: 3px;
-	
-	display: inline-block;
-	
-	border: 1px solid #CB9D41;
-	color: #CB9D41;
-	
-	text-decoration: none;
-	pointer-events: none;
-	cursor: default;
-}
 
 #item_sell {
 	width: 370px;
@@ -1133,9 +1497,9 @@ hr {
 	height : 56px;
 	
 	background-color: #181922;
-	color: white !important;
 	border: 0px;
-	
+
+	font-weight: bold;
 	font-size: 25px;
 	position: absolute;
 	left: 50px;
@@ -1143,15 +1507,21 @@ hr {
 	outline: none;
 }
 
+.red { color: #FC5050; }
+.pink { color: #CD64D1; }
+.yellow { color: #E5D75E; }
+.blue { color: #6C9CEB; }
+.white { color: white; }
+.gray { color: gray; }
 
 #coin_sell_input2 {
 	width : 140px;
 	height : 56px;
 	
 	background-color: #181922;
-	color: white !important;
 	border: 0px;
 	
+	font-weight: bold;
 	font-size: 25px;
 	position: absolute;
 	left: 50px;
