--- a/2024_0720_Project2_DB/src/main/webapp/resources/css/main_backup.css
+++ b/2024_0720_Project2_DB/src/main/webapp/resources/css/main_backup.css
@@ -40,23 +40,24 @@ a:hover{
 #header-img1 {
 	text-align: center;
 	z-index: 10;
-	margin-top: -5px;
+	margin-top: -8px;
+}
+
+#header1 {
+	display: flex;
+	justify-content: start;
 }
 
 #header-img1 > img {
-	height: 20px;
-	width: 2000px;
+	height: 15px;
+	width: 250px;
+	z-index: 8;
 }
 
 #header-img2 {
 	text-align: center;
-	z-index: 11;
-	margin-top: -68px;
-}
-
-#header-img1 > img {
-	height: 20px;
-	width: 2000px;
+	z-index: 15;
+	margin-top: -63px;
 }
 
 #logo{
@@ -133,27 +134,40 @@ a:hover{
     position: absolute;
     width: 100%;
     height: 57px;   
-    border-top: 0.7px solid #292a2b;
+    border-top: 1px solid #131319 !important;
     border-bottom: 1px solid #131319 !important;
     bottom: 0;
     
     
-    background: #131319;
-    
+    background-color: #131319;
+    background-image: url("../images/deco_bg_2.png");
     
 }
 .navbar-inverse{
-	background-color:#131319;
+	background-color:#17171E;
+	background-image: url("../images/deco_bg_2.png");
 	cursor: pointer;
 }
 #header-tab-inside{
 	display:flex;
-	background-color: rgba(0, 0, 0, .1);
+	background-color: #17171E;
+	background-image: url("../images/deco_bg_2.png");
 	margin-left: 300px;
 }
+
+#header-tab-inside::after, #header-tab::after,
+.navbar-inverse::after {
+  content: '';
+  position: absolute;
+  background: #17171E;
+  z-index: -1;
+  inset: 0;
+  opacity: 0.2;
+}
+
 .container-fleid{
-	width:100%;
-	padding-top: 10px;
+	width:1300px;
+	padding-top: 9px;
 /* 	border-bottom: 1px solid #E9E9E9 !important; */
 }
 .container-fleid-list{
@@ -210,6 +224,12 @@ a:hover{
     margin: 0 auto;
     margin-top: 10px;    
 }
+#item-search2{
+    width: 1300px;
+    height: auto;
+    margin: 0 auto;
+    margin-top: 10px;    
+}
 #search-title{
     font-size: 18px;
     color: gray;
@@ -232,6 +252,7 @@ a:hover{
     margin-bottom: 30px;
     
     gap: 1.5rem;
+    width: 1200px;
 }
 .tabs{
     flex: 1;
@@ -331,7 +352,7 @@ a:hover{
     justify-content: center;
     gap: 1rem;
     bottom: calc(100% - .5rem);
-    left: 1.5rem;
+    left: 1.9rem;
     line-height: 1rem;
     padding: 0 1rem;
     background: #1e2128;
@@ -353,6 +374,7 @@ a:hover{
     width:100%;
     padding: 1.5rem;
     position: relative;
+    height: 50px;
 }
 .mode-sub{
     left: 0.5rem;
@@ -372,9 +394,7 @@ a:hover{
     position: relative;
     margin-top: -1px;
     width: 100%;
-    padding: 1.5rem;
-    min-height: 250px;
-    height: auto;
+    padding: 1.5rem;    
     
     border: 0.7px solid #292a2b;
 }
@@ -387,7 +407,7 @@ a:hover{
     justify-content: center;
     gap: 1rem;
     bottom: calc(100% - .5rem);
-    left: 1.5rem;
+    left: 1.9rem;
     line-height: 1rem;
     padding: 0 1rem;
 }
@@ -406,21 +426,9 @@ a:hover{
     flex-direction: column;
     
 }
-
-
-
-
-
-
-
-
-
-
-
 .search-window{
     position: relative;
 }
-
 .search-window #inputBox{
     font-size: 13px;
     height: 50px;
@@ -431,13 +439,8 @@ a:hover{
     background: #121212;
 }
 
-.search-window input{
-	color: #8D795C;
-	font-size: 16px;
-	font-weight: 300px;
-	
-	outline: none;
-}
+
+
 .search-btn{
     position: absolute;
     top: 10px;
@@ -448,49 +451,10 @@ a:hover{
     font-size: 19px;
     width: 3rem;
 }
-
-
-
-
-#inputBox::placeholder {
-	padding-left: 10px;
-	font-size: 13px;
-	animation: blink 1s infinite;
-}
-
-#inputBox_x {
-	position: absolute;
-	background-color: none;
-	right: 60px;
-	top: 13px;
-	
-	background: inherit;
-	
-	background: none;
-    border: none;
-    cursor: pointer; /* 커서 모양 변경 */
-    padding: 0; /* 패딩 제거 */
-}
-
-
-
-
-
-
-
-
 .option-filter{
+    top:20px;
     position: relative;
 }
-
-#option-filter-title{
-    background: #1e2128;
-    
-    position: absolute;
-    top: -21px;
-    left: 1.5rem;
-}
-
 .option-filter>input[type="text"]{
     font-size: 15px;
     color: #8D795C;
@@ -500,8 +464,6 @@ a:hover{
     padding: 0 0 .2rem 1.5rem;
     background: #15171E;
     border: 1px solid rgba(0,0,0,0.2);
-    border: 0.5px solid #524427;
-    outline: none;
 }
 .option-filter>input[type="text"]::placeholder{
     color: #8D795C;
@@ -531,10 +493,9 @@ a:hover{
 	height: 50px;
     position: relative;
     display: inline-block;
-    padding-right: 4px;
-    margin-right: 5px;
+    padding-right: 8px;
     
-    width: 150px;
+    width: 9vw;
 }
 .sort-element input{
     width: 100%;
@@ -542,13 +503,9 @@ a:hover{
     height: 50px;
     padding: 1.5rem;
     background: #252830;
-    
-    border: 0.1px solid #343536;
-    border-radius: 2px;
-    
-    color: #AAAAAA;
-    
-    font-size: 16px;
+    border: 1px solid rgba(0,0,0,0.2);
+    color: #C7C7C7;
+    font-size: 13px;
 }
 
 .sort-element input:hover{
@@ -583,19 +540,17 @@ a:hover{
     position: absolute;
     display: inline-block;
     
-    width: 150px;
-    bottom: -5px;
-    right: -30px;
+    width: 11vw;
+    right: 0.15vw;
 }
 .Initialization input{
-    width: 100px;
+    width: 100%;
     text-align: center;
     height: 50px;
     padding: 1.5rem;
-    background: #191C20;
-    border: 0.3px solid #507CB5;
-    border-radius: 2px;
-    color: #507CB5;
+    background: #8D795C;
+    border: 1px solid rgba(0,0,255,0.2);
+    color: #C7C7C7;
     font-size: 13px;
     border-radius: 5.rem;
     
@@ -605,104 +560,26 @@ a:hover{
     display: inline-block;
     padding-top: 1rem;
     
-    border-top: 0.7px solid #292a2b;
+    border-top: 1px solid #f2f2f2; 
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* 옵션 추가창 */
-
-#su-search-title{
-    background: #1e2128;
-    
-    position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 1rem;
-    bottom: calc(100% - .5rem);
-    left: 1.5rem;
-    line-height: 1rem;
-    padding: 0 1rem;
-}
-
-
 .su-search{
     position: relative;
     display: inline-block;
     padding-right: 8px;
-    margin-right: 15px;
-    margin-top: 8px;
     
-    height: 65px;
-    width: 360px;
+    width: 9vw;
     
-    border: 0.1px solid #343536;
-    border-radius: 2px;
 }
-
-#itemName, #itemName2,
-#itemName3, #itemName4,
-#itemName5, #itemName6 {
-    width: 120px;
-    height: 35px;
+.su-search input{
+    width: 100%;
+    height: 50px;
     padding: 1.5rem;
-    background: #191A20;
-    
-    position: absolute;
-    top: 14px;
-    left: 18px;
-    
-    border: 0.2px solid #343536;
-    border-radius: 2px;
-    
-    outline: none;
-    
-    color: #B89971;
+    background: #252830;
+    border: 1px solid rgba(0,0,255,0.2);
+    color: blue;
     font-weight: bold;
-    font-size: 12px;
+    font-size: 15px;
 }
-
-#su-search-input2{
-    width: 85px;
-    height: 35px;
-    padding: 1.5rem;
-    background: #191A20;
-    
-    position: absolute;
-    top: 14px;
-    left: 140px;
-    
-    border: 0.2px solid #343536;
-    border-radius: 2px;
-    
-    outline: none;
-    
-    color: #B89971;
-    font-weight: bold;
-    font-size: 12px;
-}
-
-.su-search input:hover,
-.su-search:hover {
-	box-shadow: 0px 0px 5px #444;
-}
-
-
-
 .price-search{
     position: relative;
     display: inline-block;
@@ -731,24 +608,18 @@ a:hover{
     position: absolute;
     display: inline-block;
     
-    width: 200px;
-    bottom: 18px;
-    right: -80px;
+    width: 11vw;
+    right: 0.15vw;
 }
 .sort-btn input{
-    width: 100px;
+    width: 100%;
     text-align: center;
-    height: 120px;
+    height: 50px;
     padding: 1.5rem;
-    
-    background: #8D795C;
-    
-    border: 0px;
-    border-radius: 3px;
+    background: rgba(0,0,255,0.2);
+    border: 1px solid rgba(0,0,255,0.2);
     color: #C7C7C7;
-    
-    font-size: 15px;
-    font-weight: bold;
+    font-size: 13px;
 }
 /* 정환 end */
 #article-cate{
